fix footer text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     --clr-3: #373a36;
     --clr-4: #008bce;
     --clr-5: #f2a900;
-    --clr-6: #b3c50e; /*--clr-6: #99FF00;*/ /* --clr-6: #bfb800;*/ /*--clr-6: #99d420;*/
+    --clr-6: #b3c50e;
     --clr-7: #d9d9d6;
     
 }
@@ -275,7 +275,6 @@ body {
         margin-left: 2%;
         margin-right: 2%;
     }
-
     .slider-image {
         object-fit: cover;
         height: 109vw;
@@ -284,13 +283,11 @@ body {
         margin: 0vw 1vw ;
         height: 100%; /*115%*/
     }
-    
     .carousel-control-next-icon, .carousel-control-prev-icon {
         height: 8vw !important;
         width: 8vw !important;
         margin-top: 100%;
     }
-    
     /*===================================================================*/
     .middle-part {
         padding: 0%;
@@ -347,7 +344,9 @@ body {
     /*===================================================================*/
     .bottom-part {
         width: 100%;
-        display: flex;
+
+        margin: 0%;
+        padding: 0%;
     }
     .footer-text {
         font-size: calc(5px + 0.8vw);
@@ -357,6 +356,8 @@ body {
         left: 50%;
         transform: translateX(-50%);
         padding: 5% 3% 3% 3%;
+        display: inline-block;
+        width: 100%;
     }
     
     .footer-image {
